rust/pattern_c.rs

#[test]
fn bindgen_test_layout_property_t() {
    assert_eq!(
        ::std::mem::size_of::<property_t>(),
        44usize,
        concat!("Size of: ", stringify!(property_t))
    );
    assert_eq!(
        ::std::mem::align_of::<property_t>(),
        1usize,
        concat!("Alignment of ", stringify!(property_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).componentIndex as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(componentIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).displayOrder as *const _ as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(displayOrder)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).isMandatory as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(isMandatory)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).isList as *const _ as usize },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(isList)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).showValues as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(showValues)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).isObsolete as *const _ as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(isObsolete)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).show as *const _ as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(show)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).valueType as *const _ as usize },
        7usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(valueType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).defaultValueIndex as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(defaultValueIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).nameOffset as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(nameOffset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).descriptionOffset as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(descriptionOffset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).categoryOffset as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(categoryOffset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).urlOffset as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(urlOffset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).firstValueIndex as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(firstValueIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).lastValueIndex as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(lastValueIndex)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).mapCount as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(mapCount)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<property_t>())).firstMapIndex as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(property_t),
            "::",
            stringify!(firstMapIndex)
        )
    );
}
pub type fiftyoneDegreesProperty = property_t;
#[repr(C, packed(2))]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_value_t {
    pub propertyIndex: i16,
    pub nameOffset: i32,
    pub descriptionOffset: i32,
    pub urlOffset: i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_value_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_value_t>(),
        14usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_value_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_value_t>(),
        2usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_value_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_value_t>())).propertyIndex as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_value_t),
            "::",
            stringify!(propertyIndex)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_value_t>())).nameOffset as *const _ as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_value_t),
            "::",
            stringify!(nameOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_value_t>())).descriptionOffset as *const _
                as usize
        },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_value_t),
            "::",
            stringify!(descriptionOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_value_t>())).urlOffset as *const _ as usize
        },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_value_t),
            "::",
            stringify!(urlOffset)
        )
    );
}
pub type fiftyoneDegreesValue = fiftyoneDegrees_value_t;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_profile_t {
    pub componentIndex: byte,
    pub profileId: i32,
    pub valueCount: i32,
    pub signatureCount: i32,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_profile_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_profile_t>(),
        13usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_profile_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_profile_t>(),
        1usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_profile_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_t>())).componentIndex as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_t),
            "::",
            stringify!(componentIndex)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_t>())).profileId as *const _ as usize
        },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_t),
            "::",
            stringify!(profileId)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_t>())).valueCount as *const _ as usize
        },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_t),
            "::",
            stringify!(valueCount)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<fiftyoneDegrees_profile_t>())).signatureCount as *const _
                as usize
        },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_profile_t),
            "::",
            stringify!(signatureCount)
        )
    );
}
pub type fiftyoneDegreesProfile = fiftyoneDegrees_profile_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_date_t {
    pub year: i16,
    pub month: byte,
    pub day: byte,
}
#[test]
fn bindgen_test_layout_fiftyoneDegrees_date_t() {
    assert_eq!(
        ::std::mem::size_of::<fiftyoneDegrees_date_t>(),
        4usize,
        concat!("Size of: ", stringify!(fiftyoneDegrees_date_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fiftyoneDegrees_date_t>(),
        2usize,
        concat!("Alignment of ", stringify!(fiftyoneDegrees_date_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_date_t>())).year as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_date_t),
            "::",
            stringify!(year)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_date_t>())).month as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_date_t),
            "::",
            stringify!(month)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fiftyoneDegrees_date_t>())).day as *const _ as usize },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(fiftyoneDegrees_date_t),
            "::",
            stringify!(day)
        )
    );
}
pub type fiftyoneDegreesDate = fiftyoneDegrees_date_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fiftyoneDegrees_entity_header_t {
    pub startPosition: i32,
    pub length: i32,
    pub count: i32,
}
